# graduate_paper_backend

./: .gitignore  Cargo.toml
scripts/: test_server.bat
src/: main.rs  postgres.rs
src/api/: full_paper_api.rs  login_api.rs  mod.rs  paper_api.rs  student.rs  student_api.rs  teacher_api.rs
src/manager/: mod.rs  regex_manager.rs
src/model/: full_paper_data.rs  login_user.rs  mod.rs  paper.rs  query_id.rs  student.rs  teacher.rs  user.rs
src/model/display/: basic_user.rs  mod.rs
