[package]
name = "graduate_paper_manager"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.9.0"
anyhow = "1.0.93"
deadpool-postgres = "0.14.0"
env_logger = "0.11.5"
log = "0.4.22"
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.132"
tokio-postgres = { version = "0.7.12", features = ["with-serde_json-1"] }
