[package]
name = "graduate_paper_manager"
version = "0.1.0"
edition = "2021"

[dependencies]
# actix-web = "4.9.0"
anyhow = "1.0.93"
axum = "0.7.9"
deadpool-postgres = "0.14.0"
env_logger = "0.11.5"
log = "0.4.22"
regex = "1.11.1"
reqwest = "0.12.9"
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.133"
tokio = { version = "1.41.1", features = ["full"] }
tokio-postgres = { version = "0.7.12", features = ["with-serde_json-1"] }
tower = "0.5.1"
